src/css/imageEditorPage.css
.imageEditorPage{
  display: flex;
  flex-direction: column;
  align-items: center;
  background: black;

}
.imageEditorPage nav{
  display: flex;
  border-bottom: 2px solid #737373;
  width: 100%;
  background-color: #595959;
  z-index: 4;
}
.imageEditorPage nav > div{
  overflow: hidden;
  height: 22px;
  flex-grow: 1;
  padding: 10px;
  color: #fff4e8;
  text-align: center;
  border-right: 2px solid #737373;
}
.imageEditorPage nav .shrink .st0{
  fill: none;
  stroke: #fff4e8;
  stroke-width: 5;
  stroke-miterlimit: 10;
}
.imageEditorPage nav .shrink .st1{
  fill: none;
  stroke: #fff4e8;
  stroke-width: 5;
  stroke-miterlimit: 3;
}
.imageEditorPage .imageContainer {
  width: 100vw;
  display: flex;
  justify-content: center;
  align-items: center;
  height: calc(100vh - 42px);
}
.imageEditorPage .imageToBeEdited {
  max-height: calc(100vh - 42px);
  max-width: 100vw;
}
.imageEditorPage .handle {
  border-radius: 50%;
  box-shadow: inset 0 0 0 10px;
  opacity: 0.8;
  cursor: grab;
  color: tomato;
  display: none;
  position: absolute;
  width: 20px;
  height: 20px;
}
.imageEditorPage .handle.show {
  display: block;
}
.imageEditorPage .handleLine {
  display: none;
  opacity: 0.6;
  position: absolute;
  border: 1px dashed tomato;
}
.imageEditorPage .handleLine[data-handle-line="top"], .imageEditorPage .handleLine[data-handle-line="bottom"] {
  /* height: 2px; */
}
.imageEditorPage .handleLine[data-handle-line="right"], .imageEditorPage .handleLine[data-handle-line="left"] {
  /* width: 2px; */
}
.imageEditorPage .handleLine.show {
  display: block;
}

/* .imageEditorPage .imageContainer .cropperOverlay{
  display: none;
  position: absolute;
  z-index: 2;
  height: 180px;
  width: 180px;
}
.imageEditorPage .imageContainer .cropperOverlay.show{
  display: flex;
} */

